app/kube/app-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    nginx.org/websocket-services: "flask-app-service"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/secure-backends: "true"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "1800"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "1800"
spec:
  tls:
  - hosts:
    - backend.browsergpt.app
    secretName: example-tls
  rules:
  - host: backend.browsergpt.app
    http:
      paths:
      - pathType: Prefix
        path: /socket.io/
        backend:
          service:
            name: flask-app-service
            port:
              number: 3001

      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: flask-app-service
            port:
              number: 3001
